--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tab-establec-almacenes-plantas.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tab-establec-almacenes-plantas.component.html
@@ -63,6 +63,11 @@
                 <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
               </ng-container>
 
+              <ng-container matColumnDef="subGrupo">
+                <th mat-header-cell *matHeaderCellDef>Sub Grupo</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
               <tr mat-header-row *matHeaderRowDef="displayedAreas"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedAreas;"></tr>
             </table>
@@ -80,11 +85,11 @@
         <div class="m-card">
           <div class="flex justify-between items-center pr-2 pb-2">
             <div class="flex gap-3">
-              <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">save</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">cancel</span></button>
+              <button class="boton-icon bnt01" title="nuevo"><span class="material-icons">add</span></button>
+              <button class="boton-icon bnt01" title="editar"><span class="material-icons">edit</span></button>
+              <button class="boton-icon bnt01" title="eliminar"><span class="material-icons">delete</span></button>
+              <button class="boton-icon bnt01" title="guardar"><span class="material-icons">save</span></button>
+              <button class="boton-icon bnt01" title="cancelar"><span class="material-icons">cancel</span></button>
             </div>
             <div class="campo">
               <label for="">Situación:</label>
@@ -97,17 +102,50 @@
               </ng-select>
             </div>
           </div>
+
+          <div class="grid grid-cols gap-4 p-2">
+            <div class="m-card">
+              <mat-tab-group dynamicHeight animationDuration="0ms" selectedIndex="0">
+                <mat-tab label="Datos Generales">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-sup-datos-generales></app-tab-sup-datos-generales>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Temperatura de Almacenamiento">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-sup-datos-temp-alm></app-tab-sup-datos-temp-alm>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Inicio/Cierre">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-sup-datos-inicio-cierre></app-tab-sup-datos-inicio-cierre>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Personal">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-sup-datos-personal ></app-tab-sup-datos-personal>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Observaciones">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-sup-datos-observaciones></app-tab-sup-datos-observaciones>
+                  </div>
+                </mat-tab>
+              </mat-tab-group>
+            </div>
+          </div>
+
         </div>
       </div>
       <div class="campo">
         <div class="m-card">
           <div class="flex justify-between items-center pr-2 pb-2">
             <div class="flex gap-3">
-              <button class="boton-icon bnt01"><span class="material-icons">add</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">edit</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">delete</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">save</span></button>
-              <button class="boton-icon bnt01"><span class="material-icons">cancel</span></button>
+              <button class="boton-icon bnt01" title="nuevo"><span class="material-icons">add</span></button>
+              <button class="boton-icon bnt01" title="editar"><span class="material-icons">edit</span></button>
+              <button class="boton-icon bnt01" title="eliminar"><span class="material-icons">delete</span></button>
+              <button class="boton-icon bnt01" title="guardar"><span class="material-icons">save</span></button>
+              <button class="boton-icon bnt01" title="cancelar"><span class="material-icons">cancel</span></button>
             </div>
             <div class="campo">
               <label for="">Situación:</label>
@@ -120,6 +158,50 @@
               </ng-select>
             </div>
           </div>
+
+          <div class="grid grid-cols gap-4 p-2">
+            <div class="m-card">
+              <mat-tab-group dynamicHeight animationDuration="0ms" selectedIndex="0">
+                <mat-tab label="Datos Generales">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-datos-generales></app-tab-inf-datos-generales>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Inicio/Cierre">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-inicio-cierre></app-tab-inf-inicio-cierre>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Forma Farm.">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-forma-far></app-tab-inf-forma-far>
+                  </div>
+                </mat-tab>
+
+                <mat-tab label="F. Cosmetica">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-cosmetica></app-tab-inf-cosmetica>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Tp. Prd. San.">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-tp-prd-san></app-tab-inf-tp-prd-san>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Actividad">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-actividad></app-tab-inf-actividad>
+                  </div>
+                </mat-tab>
+                <mat-tab label="Observaciones">
+                  <div class="example-large-box mat-elevation-z4">
+                    <app-tab-inf-observaciones></app-tab-inf-observaciones>
+                  </div>
+                </mat-tab>
+              </mat-tab-group>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
