opciones de Temperatura de Almacenamiento

--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-temp-alm/tab-sup-datos-temp-alm.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/superior/tab-sup-datos-temp-alm/tab-sup-datos-temp-alm.component.html
@@ -1,1 +1,12 @@
-<p>tab-sup-datos-temp-alm works!</p>
+
+<div class="m-card">
+  <mat-checkbox class="example-margin">Temperatura Ambiente</mat-checkbox>
+  <br>
+  <mat-checkbox class="example-margin">Temperatura Controlada</mat-checkbox>
+  <br>
+  <mat-checkbox class="example-margin">Temperatura Refrigerada</mat-checkbox>
+  <br>
+  <mat-checkbox class="example-margin">Temperatura Ambiente Congelada</mat-checkbox>
+  <br>
+  <mat-checkbox class="example-margin">Temperatura Congelada</mat-checkbox>
+</div>
