--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-tp-prd-san/tab-inf-tp-prd-san.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-tp-prd-san/tab-inf-tp-prd-san.component.html
@@ -1,1 +1,33 @@
-<p>tab-inf-tp-prd-san works!</p>
+<div class="flex flex-col gap-1">
+  <div class="flex w-full">
+    <div class="m-card">
+      <div class="grid grid-cols-1 gap-1">
+        <div class="campo">
+          <div class="m-card">
+            <div class="flex justify-between items-center pr-2 pb-2">
+              <h2></h2>
+              <div class="flex gap-3">
+                <button class="boton-icon bnt01" title="nuevo"><span class="material-icons">add</span></button>
+                <button class="boton-icon bnt01" title="editar"><span class="material-icons">edit</span></button>
+                <button class="boton-icon bnt01" title="eliminar"><span class="material-icons">delete</span></button>
+              </div>
+            </div>
+            <table mat-table [dataSource]="dataSourceTipoProducto" class="table border">
+              <ng-container matColumnDef="tipoProducto">
+                <th mat-header-cell *matHeaderCellDef>Tipo Producto</th>
+                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+              </ng-container>
+
+              <tr mat-header-row *matHeaderRowDef="displayedTipoProducto"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedTipoProducto;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[3, 6, 9]"
+                           showFirstLastButtons
+                           aria-label="Select page of periodic elements">
+            </mat-paginator>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
