--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-forma-far/tab-inf-forma-far.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-forma-far/tab-inf-forma-far.component.html
@@ -13,7 +13,7 @@
               </div>
             </div>
             <table mat-table [dataSource]="dataSourceForma" class="table border">
-              <ng-container matColumnDef="tipoProducto">
+              <ng-container matColumnDef="forma">
                 <th mat-header-cell *matHeaderCellDef>Forma</th>
                 <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
               </ng-container>
