--- a/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-actividad/tab-inf-actividad.component.html
+++ b/src/app/pages/establecimiento/tab-establec-almacenes-plantas/tabs/inferior/tab-inf-actividad/tab-inf-actividad.component.html
@@ -7,15 +7,25 @@
             <div class="flex justify-between items-center pr-2 pb-2">
               <h2></h2>
               <div class="flex gap-3">
-                <button class="boton-icon bnt01" title="nuevo"><span class="material-icons">add</span></button>
-                <button class="boton-icon bnt01" title="editar"><span class="material-icons">edit</span></button>
-                <button class="boton-icon bnt01" title="eliminar"><span class="material-icons">delete</span></button>
+                <button (click)="openModalActividades()" class="boton-icon bnt01" title="nuevo"><span class="material-icons">add</span></button>
+                <button *ngIf="selectionRowActividad.selected.length == 1" class="boton-icon bnt01" title="editar"><span class="material-icons">edit</span></button>
+                <button (click)="onEliminarActividades()" *ngIf="selectionRowActividad.selected.length > 0" class="boton-icon bnt01" title="eliminar"><span class="material-icons">delete</span></button>
               </div>
             </div>
             <table mat-table [dataSource]="dataSourceActividad" class="table border">
+              <ng-container matColumnDef="select">
+                <th mat-header-cell *matHeaderCellDef>
+                </th>
+                <td mat-cell *matCellDef="let element">
+                  <mat-checkbox (click)="$event.stopPropagation()"
+                    (change)="$event ? selectionRowActividad.toggle(element) : null">
+                  </mat-checkbox>
+                </td>
+              </ng-container>
+
               <ng-container matColumnDef="actividad">
-                <th mat-header-cell *matHeaderCellDef>Actividad</th>
-                <td mat-cell *matCellDef="let element"> {{element.TPCDESCRIP}} </td>
+                <th mat-header-cell *matHeaderCellDef>Actividades</th>
+                <td mat-cell *matCellDef="let element"> {{element.ACTDESCRIP}} </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="displayedActividad"></tr>
